--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,11 +1,14 @@
 [package]
-name = "leetcode-rust"
-version = "0.1.0"
+name = "leetcode_rust"
+version = "0.1.1"
 edition = "2021"
-
-# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
+authors = ["Zhongdong Yang <zhongdong_y@outlook.com>"]
+categories = ["problems", "algorithm"]
+keywords = ["leetcode"]
+description = "Personal solutions to LeetCode problems using Rust language"
+repository = "https://github.com/zhongdongy/leetcode-rust"
 
 [dependencies]
 
 [lib]
-crate-type = ["cdynlib"]
+crate-type = ["cdylib", "rlib"]
