Update: refactor solution structure

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -34,7 +34,7 @@
           "--package=leetcode_rust"
         ],
         "filter": {
-          "name": "problems",
+          "name": "solutions",
           "kind": "test"
         }
       },
