--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -7,26 +7,7 @@
     {
       "type": "lldb",
       "request": "launch",
-      "name": "Debug unit tests in library 'leetcode_rust'",
-      "cargo": {
-        "args": [
-          "test",
-          "--no-run",
-          "--lib",
-          "--package=leetcode_rust"
-        ],
-        "filter": {
-          "name": "leetcode_rust",
-          "kind": "lib"
-        }
-      },
-      "args": [],
-      "cwd": "${workspaceFolder}"
-    },
-    {
-      "type": "lldb",
-      "request": "launch",
-      "name": "Debug integration test 'problems'",
+      "name": "Debug 'problems'",
       "cargo": {
         "args": [
           "test",
@@ -35,6 +16,24 @@
         ],
         "filter": {
           "name": "solutions",
+          "kind": "test"
+        }
+      },
+      "args": [],
+      "cwd": "${workspaceFolder}"
+    },
+    {
+      "type": "lldb",
+      "request": "launch",
+      "name": "Debug 'problems_cn'",
+      "cargo": {
+        "args": [
+          "test",
+          "--no-run",
+          "--package=leetcode_rust"
+        ],
+        "filter": {
+          "name": "solutions_cn",
           "kind": "test"
         }
       },
