Update: add check out step

--- a/.github/workflows/deploy_oss.yml
+++ b/.github/workflows/deploy_oss.yml
@@ -17,3 +17,4 @@ jobs:
           endpoint: ${{ secrets.S3_ENDPOINT }}
           region: ${{ secrets.S3_REGION }}
           bucket: ${{ secrets.S3_BUCKET }}
+          pathFormat: /$(file)
