Update: upload path

--- a/.github/workflows/deploy_oss.yml
+++ b/.github/workflows/deploy_oss.yml
@@ -18,4 +18,4 @@ jobs:
           endpoint: ${{ secrets.S3_ENDPOINT }}
           region: ${{ secrets.S3_REGION }}
           bucket: ${{ secrets.S3_BUCKET }}
-          path-format: /$(file)
+          path-format: $(file)
