--- a/.github/workflows/deploy_oss.yml
+++ b/.github/workflows/deploy_oss.yml
@@ -7,15 +7,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - run: 'find ./docs -iname ".*" -delete'
-      - run: 'cd docs'
-      - name: Upload to Amazon S3
-        uses: Noelware/s3-action@2.1.0
-        with:
-          directories: "."
-          access-key-id: ${{ secrets.S3_ACCESS_KEY }}
-          secret-key: ${{ secrets.S3_SECRET_KEY }}
-          endpoint: ${{ secrets.S3_ENDPOINT }}
-          region: ${{ secrets.S3_REGION }}
-          bucket: ${{ secrets.S3_BUCKET }}
-          path-format: $(file)
+      - name: Upload file to bucket
+        uses: koraykoska/s3-upload-github-action@master
+        env:
+          FILE: ./docs/
+          S3_ENDPOINT: ${{ secrets.S3_ENDPOINT }}
+          S3_BUCKET: ${{ secrets.S3_BUCKET }}
+          S3_ACCESS_KEY_ID: ${{ secrets.S3_ACCESS_KEY }}
+          S3_SECRET_ACCESS_KEY: ${{ secrets.S3_SECRET_KEY }}
