--- a/.github/workflows/doc_test.yml
+++ b/.github/workflows/doc_test.yml
@@ -6,9 +6,20 @@ jobs:
     name: Rust toolchain CI
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - uses: actions/cache@v3
+        id: "cache-cargo"
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - if: ${{ steps.cache-cargo.outputs.cache-hit != 'true' }}
+        run: "cargo check"
       - name: "Doctest for all solutions"
         run: "cargo test --doc"
