--- a/.github/workflows/solution_test_cn.yml
+++ b/.github/workflows/solution_test_cn.yml
@@ -6,10 +6,21 @@ jobs:
     name: Rust toolchain CI
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v3
       - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
+      - uses: actions/cache@v3
+        id: "cache-cargo"
+        with:
+          path: |
+            ~/.cargo/bin/
+            ~/.cargo/registry/index/
+            ~/.cargo/registry/cache/
+            ~/.cargo/git/db/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      - if: ${{ steps.cache-cargo.outputs.cache-hit != 'true' }}
+        run: "cargo check"
       - name: "力扣解法的单元测试"
         run: "cargo test --lib problems_cn:: --release"
       - name: "力扣解法的整合测试"
