--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,8 +8,6 @@ keywords = ["leetcode"]
 description = "Personal solutions to LeetCode problems using Rust language"
 repository = "https://github.com/zhongdongy/leetcode_rust"
 
-[dependencies]
-
 [dev-dependencies]
 criterion = "0.4"
 
@@ -22,3 +20,7 @@ name = "leetcode_rust"
 [[bench]]
 name = "benchmark"
 harness = false
+
+[dependencies]
+serde = { version = "1.0.152", features = ["derive"] }
+serde_json = "1.0.93"
