--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "leetcode_rust"
-version = "0.2.4"
+version = "0.2.5"
 edition = "2021"
 authors = ["Zhongdong Yang <zhongdong_y@outlook.com>"]
 categories = ["problems", "algorithm"]
@@ -18,7 +18,7 @@ crate-type = ["rlib"]
 name = "leetcode_rust"
 
 [[bench]]
-name = "benchmark"
+name = "benchmarks"
 harness = false
 
 [dependencies]
